@@ -1,4 +1,4 @@
-# $Id: ngircd-test.conf,v 1.5 2007/11/18 15:07:16 alex Exp $
+# $Id: ngircd-test.conf,v 1.6 2008/02/17 00:00:13 fw Exp $
 
 [Global]
 	Name = ngircd.test.server
@@ -9,6 +9,7 @@
 	MaxConnectionsIP = 0
 	ServerUID = 1
 	ServerGID = 1
+	OperCanUseMode = yes
 
 [Operator]
 	Name = TestOp
