@@ -11,6 +11,9 @@
 
 
 ngIRCd HEAD
+  - RPL_WHOREPLY messages generated by IRC_WHO didn't
+    include flags (*,@,+) (Dana Dahlstrom)
+  - also add test cases for this (again, Dana)
   - Under some circumstances ngIRCd issued
   channel MODE messages with a trailing space. (Dana Dahlstrom)
   - IRC_WHO now supports search patterns and will test this
@@ -746,4 +749,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.338 2008/02/16 11:27:48 fw Exp $
+$Id: ChangeLog,v 1.339 2008/02/17 00:00:12 fw Exp $
